[package]
authors = ["BButner"]
description = "Unofficial Stream Deck SDK for Rust"
name = "rusty-patio"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/bbutner/rusty-patio"
repository = "https://github.com/bbutner/rusty-patio"
readme = "README.md"
license = "GPL-3.0"
keywords = ["streamdeck", "sdk", "rust"]
categories = ["hardware-support", "api-bindings"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
futures-util = "0.3.26"
mime_guess = "2.0.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["rt", "io-std", "sync", "fs"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
